Changelog
=========

4.1.3 (unreleased)
------------------

- Allow ``properties`` to be passed to ``PloneUser.setProperties``.
  This was previously ignored as ``setProperties`` solely utilised
  keyword arguments.
  [davidjb]


4.1.2 (2014-01-27)
------------------

- Don't try to migrate the root user folder if the portal has no parent.
  [davisagli]

- Use batteries included odict implementation in favour of homegrown one.
  [tomgross]

- Use correct methods for getting users from id or names
  [tomgross]

- Ported tests to plone.app.testing
  [tomgross]

4.1.1 (2013-03-05)
------------------

- Fix a bug in setSecurityProfile where the login name was passed
  instead of the user id.
  [davisagli]

- Added empty updateUser and updateEveryLoginName methods in
  ZODBMutablePropertyProvider to fulfill the new standards of the
  IUserEnumerationPlugin.
  [maurits]


4.1 (2013-01-01)
----------------

- Fix assignRoleToPrincipal to work with new Products.PluggableAuthService 1.10.0.
  [maurits]

- Fix saving, getting and deleting the user portrait for non-standard
  user ids like 'bob-jones' or 'bob-jones+test@example.org'.
  [maurits]

- Fix the test for the current password if the user id differs from
  the login name.
  [maurits]


4.1a2 (2012-08-29)
------------------

- Bug fix: User with e-mail login got 'Insufficient Privileges' when
  trying to delete own portrait. Fixes http://dev.plone.org/ticket/12819.
  [patch by kagesenshi, applied by kleist]

- MembershipTool.searchForMembers() now preserves sort order.
  Fixes http://dev.plone.org/ticket/11716.
  [patch by neaj, applied by kleist]

- Changed deprecated getSiteEncoding to hardcoded `utf-8`
  [tom_gross]


4.1a1 (2012-06-29)
------------------

- Allow members with usernames that contain special characters
  (such as @ when use email to login), set their own member portrait
  [erral]

- PEP8 Cleanup
  [pbdiode]

- Add a default password validation policy as PAS plugin,