@@ -4,6 +4,9 @@ Changelog
 4.1.3 (unreleased)
 ------------------
 
+- Do not write member data on read
+  [vangheem]
+
 - Allow ``properties`` to be passed to ``PloneUser.setProperties``.
   This was previously ignored as ``setProperties`` solely utilised
   keyword arguments.
